--- a/app/css/recollectionStyles.scss
+++ b/app/css/recollectionStyles.scss
@@ -57,13 +57,18 @@ section {
   padding: .5em;
   font-family: $mainFont;
   float:left;
-  width:35%;
-  height:5em;
+  width:13.5em;
+  height:13.5em;
   background-color: #000;
   color: #fff;
   margin: 1em;
+  text-align: center;
   }
 
+.metroButtons i {
+    top:27.5%;
+    font-size: 5em;
+}
 
 @media (min-width: 768px) {
 
@@ -304,14 +309,6 @@ border-color: #fff;
     margin-bottom: 0;
   }
 }
-@media (min-width: 1200px) {
-  /* Widen the fixed sidebar again */
-  .bs-sidebar.affix-bottom,
-  .bs-sidebar.affix {
-    width: 263px;
-  }
-}
-
 
 /* Not enough room on mobile for markup tab, js tab, and plunk btn.
   And no one cares about plunk button on a phone anyway */
