--- a/app/modules/core/views/home.html
+++ b/app/modules/core/views/home.html
@@ -1,7 +1,7 @@
 
     <section class="container-fluid">
-			<div class="metroButtons">Block level button</div>
-  			<div class="metroButtons">Block level button 2</div>
-  			<div class="metroButtons">Block level button 3</div>
-  			<div class="metroButtons">Block level button 4</div>
+			<div class="metroButtons"><i class='glyphicon glyphicon-pencil'></i></div>
+  			<div class="metroButtons"><i class='glyphicon glyphicon-calendar'></i></div>
+  			<div class="metroButtons"><i class='glyphicon glyphicon-tags'></i></div>
+  			<div class="metroButtons"><i class='glyphicon glyphicon-wrench'></i></div>
     </section>
