--- a/app/css/recollectionStyles.scss
+++ b/app/css/recollectionStyles.scss
@@ -10,7 +10,7 @@ $rpOrange: #ff6633;
 
 
 h1 {
-  font-family: $headlineFont;
+  font-family: $headlineFont, arial;
 }
 
 
@@ -49,6 +49,10 @@ ibody {
 
 .metroButtons:hover {
     color: $rpOrange;
+}
+
+.rp_inputBox {
+  margin: 2em;
 }
 
 .bs-header {
