--- a/app/css/recollectionStyles.css
+++ b/app/css/recollectionStyles.css
@@ -67,6 +67,9 @@ ibody {
 h1 {
   text-align: left; }
 
+.textarea {
+  width: 100%; }
+
 @media screen and (min-width: 768px) {
   .dropdown.open > .navbar-brand + .dropdown-menu {
     left: 10px; }
