--- a/app/css/recollectionStyles.scss
+++ b/app/css/recollectionStyles.scss
@@ -84,6 +84,10 @@ h1 {
   text-align: left;
 }
 
+.textarea {
+  width: 100%;
+}
+
 @media screen and (min-width: 768px) {
 
     .dropdown.open > .navbar-brand + .dropdown-menu {
