--- a/app/views/dailyForm1.html
+++ b/app/views/dailyForm1.html
@@ -1,23 +1,23 @@
 
- <form id="localStorageTest" method="post" action="">
+ <form id="dailyEntry" name="dailtyEntry">
  	
  	<div class="input-group input-group-lg rp_inputBox">
-    <span class="input-group-addon" id="sizing-addon1">></span>
-    <input type="text" name="entryTitle" id="entryTitle" class="form-control stored" placeholder="Entry Title" value="" />
+   		 <span class="input-group-addon" id="sizing-addon1">></span>
+    		<input type="text" name="entryTitle" id="entryTitle" class="form-control stored" placeholder="Entry Title" value="" />
 	</div>
 	
 	<div class="input-group input-group-lg rp_inputBox">
-    <span class="input-group-addon" id="sizing-addon1">></span> 
-    <input type="email" name="tags" id="tags" class="form-control stored" placeholder="Tags" value="" />
+    	<span class="input-group-addon" id="sizing-addon1">></span> 
+    		<input type="email" name="tags" id="tags" class="form-control stored" placeholder="Tags" value="" />
 	</div>
 
 	<div class="input-group input-group-lg rp_inputBox">  
-	<span class="input-group-addon" id="sizing-addon1">></span>  
-    <textarea class="form-control stored textarea" rows="5" name="dailyEntry" id="dailyEntry" placeholder="Your Daily Entry"/>
+	<span class="input-group-addon" id="sizing-addon1">></span> 
+   		<textarea class="form-control stored textarea" rows="5" name="mainEntry" id="mainEntry" placeholder="Your Daily Entry"/>
 	</div>
 
 	<div class="input-group input-group-lg rp_inputBox"> 
-    <a href="#/dailyForm2"><input type="submit" class="btn btn-default pull-right" value="Next" /></a>
+   	 	<a href="#/dailyForm2"><input type="submit" class="btn btn-default pull-right submitForm" value="Next" />
 	</div>
 
 </form>
@@ -34,7 +34,7 @@
 		            $('#tags').val(localStorage["tags"]);
 		        }
 		        if (localStorage["dailyEntry"]) {
-		            $('#dailyEntry').val(localStorage["dailyEntry"]);
+		            $('#mainEntry').val(localStorage["mainEntry"]);
 		        }
 		    }
 		    init();
@@ -42,10 +42,6 @@
 
 		$('.stored').keyup(function () {
 		    localStorage[$(this).attr('name')] = $(this).val();
-		});
-
-		$('#localStorageTest').submit(function() {
-		    localStorage.clear();
 		});
 
 		</script>
