--- a/app/views/dailyForm1.html
+++ b/app/views/dailyForm1.html
@@ -13,7 +13,7 @@
 
 	<div class="input-group input-group-lg rp_inputBox">  
 	<span class="input-group-addon" id="sizing-addon1">></span> 
-   		<textarea class="form-control stored textarea" rows="5" name="mainEntry" id="mainEntry" placeholder="Your Daily Entry"/>
+   		<textarea class="form-control stored textarea" rows="5" name="mainEntry" id="mainEntry" placeholder="Your Daily Entry"></textarea>
 	</div>
 
 	<div class="input-group input-group-lg rp_inputBox"> 
