--- a/app/views/dailyForm2.html
+++ b/app/views/dailyForm2.html
@@ -42,7 +42,7 @@
 		<script type="text/javascript">
 		$(document).ready(function () {
 
-					Weather.getCurrent("Kansas City", function(current) {
+					Weather.getCurrent("Budapest", function(current) {
   					var currentTemp = current.temperature();
   					var currentCond = current.conditions();				
   					var finalTemp = Math.round(parseInt(currentTemp) - 273.15) * 9 / 5 + 32;
