--- a/app/styles/recollectionStyles.scss
+++ b/app/styles/recollectionStyles.scss
@@ -102,9 +102,15 @@ h1 {
   text-align: left;
 }
 
+.radioLabel {
+   margin: 8em .75em 0 2em;
+   font-family: $mainFont;
+   font-size: 1.35em;
+   color:#999;
+}
+
 #calendar {
   padding-left: 2em;
-
 }
 
 #currentWeather {
