--- a/app/views/dailyForm3.html
+++ b/app/views/dailyForm3.html
@@ -52,6 +52,8 @@
     			xhr.setRequestHeader("Content-Type", "application/json");
     			xhr.send(dailyJSON);
 
+    			alert("Another Day Recorded!")
+
 			});
 
 		</script>
