--- a/app/views/main.html
+++ b/app/views/main.html
@@ -2,5 +2,6 @@
       <a href="#/dailyForm1"><div class="metroButtons" data-toggle="tooltip" title="Daily Entry"><i class='glyphicon glyphicon-pencil'></i></div></a>
       <a href="#/mainCalendar"><div class="metroButtons" data-toggle="tooltip" title="Calendar View of Past Entries"><i class='glyphicon glyphicon-calendar'></i></div></a>
       <a href="#/mainTags"><div class="metroButtons" data-toggle="tooltip" title="Tags"><i class='glyphicon glyphicon-tags'></i></div></a>
+      <a href="#/entryLog"><div class="metroButtons" data-toggle="tooltip" title="Settings & Preferences"><i class='glyphicon glyphicon-eye-open'></i></div></a>
       <a href="#/settings"><div class="metroButtons" data-toggle="tooltip" title="Settings & Preferences"><i class='glyphicon glyphicon-wrench'></i></div></a>
     </section>
