--- a/app/styles/recollectionStyles.scss
+++ b/app/styles/recollectionStyles.scss
@@ -117,6 +117,11 @@ h1 {
   padding-left: 2em;
 }
 
+#entryTable {
+margin-left: 2em;
+
+}
+
 @media screen and (max-width: 768px) {
 
     .dropdown.open > .navbar-brand + .dropdown-menu {
