--- a/app/styles/recollectionStyles.scss
+++ b/app/styles/recollectionStyles.scss
@@ -136,21 +136,27 @@ margin-left: 2em;
         font-size: 3em;
     }
 
+    .metroButtonContainer {
+    padding-top: 2em;
+    margin-left: .3em;
+
+}
+
     .metroButtons {
-      padding: .25em;
+      padding: .50em;
       font-family: $mainFont;
       float:left;
-      width:7.5em;
-      height:7.5em;
+      width:10.25em;
+      height:10.25em;
       background-color: #000;
       color: #fff;
-      margin: .5em;
+      margin: .3em;
       text-align: center;
   }
 
   .metroButtons i {
-    top:27.5%;
-    font-size: 2.25em;
+    top:33%;
+    font-size: 3em;
 }
 
  .navbar-nav .dropdown .navbar-brand {
