--- a/app/views/dailyForm1.html
+++ b/app/views/dailyForm1.html
@@ -16,9 +16,9 @@
     		<input type="text" name="entryTitle" id="entryTitle" class="form-control stored" placeholder="Entry Title" value="" />
 	</div>
 
-	<div class="input-group input-group-lg rp_inputBox">  
-	<span class="input-group-addon" id="sizing-addon1">></span> 
-   		<textarea class="form-control stored textarea" rows="5" name="mainEntry" id="mainEntry" placeholder="Your Daily Entry"></textarea>
+	<div class="input-group rp_inputBox">  
+	<span class="input-group-addon textareaSize" id="sizing-addon1">></span> 
+   		<textarea input type="text" class="form-control stored textareaSize" rows="15" name="mainEntry" id="mainEntry" placeholder="Your Daily Entry"/>
 	</div>
 	
 	<div class="input-group input-group-lg rp_inputBox"> 
