--- a/app/views/entryLog.html
+++ b/app/views/entryLog.html
@@ -26,10 +26,12 @@ var getJSON = function(url, successHandler, errorHandler) {
 getJSON('https://api.mongolab.com/api/1/databases/recollectionapp/collections/daily?apiKey=0ICZTbnaNJoaKZDCnIl-NIZZ-Jd8_TmB', function(data) {
 
     var i;
-    var out = "<table id='entryTable' class='table table-striped table-hover table-responsive'><thead><tr><th>Title</th><th>Main Entry</th><th>Daily News</th><th>MLB</th><th>Daily Pain</th><th>Weather</th></tr></thead>";
+    var out = "<table id='entryTable' class='table table-striped table-hover table-responsive'><thead><tr><th>Date</th><th>Title</th><th>Main Entry</th><th>Daily News</th><th>MLB</th><th>Daily Pain</th><th>Weather</th></tr></thead>";
 
     for(i = 0; i < data.length; i++) {
         out += "<tr><td>" + 
+        data[i].dateStamp +
+        "</td><td>" +
         data[i].entryTitle +
         "</td><td>" +
         data[i].mainEntry +
