--- a/app/views/mainCalendar.html
+++ b/app/views/mainCalendar.html
@@ -1,12 +1,13 @@
 
 <div id='calendar'></div>
 
+<div ng-controller="dbCtrl"> {{ calendarData }}</div>
 
 <script type="text/javascript">
 	$(document).ready(function() {
 
 		$('#calendar').fullCalendar({
-		 	
+
 		 })
 
 	});
